<resources>
    <string name="app_name">R6 Challenges</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="synchronize">"Synchronize"</string>
    <string name="player_name">"Player Name"</string>
    <string name="logout">"Logout"</string>
    <string name="playerWithPlatform">"Player (platform)"</string>
</resources>