<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="2dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/logoutButton"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:contentDescription="@string/logout"
                android:src="@android:drawable/ic_lock_power_off" />

            <Spinner
                android:id="@+id/playerWithPlatformSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/player_name"
                android:textSize="20sp"
                android:contentDescription="@string/playerWithPlatform"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/refreshButton"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:contentDescription="@string/synchronize"
                android:src="@android:drawable/ic_popup_sync" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/refreshProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/mainContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" >

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="409dp"
            android:layout_height="673dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainContent"
            android:id="@+id/mainContentRecyclerView"/>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>